Fix overflowing table

--- a/src/components/Leaderboard/styles/Leaderboard.css
+++ b/src/components/Leaderboard/styles/Leaderboard.css
@@ -5,7 +5,6 @@
     rgba(61, 0, 0, 1) 40%,
     rgba(149, 1, 1, 1) 100%
   );
-  padding: 10px;
   margin: 5px;
   margin-top: 0px;
   border-radius: 10px;
@@ -20,6 +19,6 @@
 .stages {
   display: flex;
   justify-content: center;
-  height: 30%;
+  min-height: 30vh;
   gap: 10%;
 }
