--- a/src/components/Leaderboard/styles/ScoreTable.css
+++ b/src/components/Leaderboard/styles/ScoreTable.css
@@ -11,7 +11,6 @@ table,
 th,
 td {
   text-overflow: clip;
-  width: 20%;
   border: 1px solid white;
 }
 
